# s3fs-rgw-sts-lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  config.h.in  make_version_files.sh
.github/workflows/: docker-image.yml  docker-publish.yml
docker/: Dockerfile  build.sh  dependencies.Dockerfile
scripts/: docker-s3fs-mount.sh  s3fs-mount.sh
src/: configureClient.cpp  getOIDCToken.cpp  main.cpp  main.hpp  readSecretValue.cpp  rgw_sts_test.cpp  s3fsFuncs.cpp
